<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">谷歌大词典</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">谷歌词典</string>
    <string name="test_text">测试文字</string>
    <string name="query">查询</string>
    <string name="addNewWord">加生词</string>
    <string name="enter">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="exit">退出</string>
    <string name="register">注册</string>
    <string name="unameDupCheck">检测用户名</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="pwdrepeat">重复密码</string>
    <string name="querying">正在查询，请稍候</string>
    <string name="reging">正在注册，请稍候</string>
    <string name="dic">词典</string>
    <string name="newWord">生词</string>
    <string name="history">历史</string>
    <string name="cn2en">中->英</string>
    <string name="en2cn">英->中</string>
    <string name="added">添加成功</string>
    <string name="confirmDelete">删除单词</string>
    <string name="deleteWord">deleteWord</string>
    <string name="deleteType">deleteType</string>
    <string name="srcLang">srcLang</string>
    <string name="tgLang">tgLang</string>
    <string name="queryString">queryString</string>
    <string name="queryResult">queryResult</string>
    <string name="regResult">regResult</string>
    <string name="networkError">#404</string>
    <string name="title_activity_dic">DicActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_new_word">NewWordActivity</string>
    <string name="title_activity_dic_spinner">DicSpinnerActivity</string>
    <string name="title_activity_bottom_menu">BottomMenu</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="title_activity_add_new_word">AddNewWordActivity</string>
    <string name="title_activity_delete_word">DeleteWordActivity</string>
    <string name="title_activity_reging">RegingActivity</string>
    <string name="title_activity_logining">LoginingActivity</string>
    <string name="title_activity_word_test">WordTestActivity</string>
    <string name="title_activity_test_result">TestResultActivity</string>

</resources>