<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/loginUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dip"
        android:text="@string/username"
        android:textSize="20dip" />
    
    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_toRightOf="@id/loginUsernameLabel"
        android:layout_alignBottom="@id/loginUsernameLabel"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/loginPwdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginUsernameLabel"
        android:layout_marginTop="40dip"
        android:text="@string/passwd"
        android:textSize="20dip" />
    
    <EditText
        android:id="@+id/loginPwd"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_toRightOf="@id/loginPwdLabel"
        android:layout_alignBottom="@id/loginPwdLabel"
        android:layout_alignLeft="@id/loginUsername"
        android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/loginEnter"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_below="@id/loginPwdLabel"
        android:layout_alignLeft="@id/loginUsername"
        android:layout_marginTop="20dip" />
    
    <Button 
        android:id="@+id/loginCancel"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_toRightOf="@id/loginEnter"
        android:layout_alignTop="@id/loginEnter" />

</RelativeLayout>