<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/regUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dip"
        android:text="@string/username"
        android:textSize="20dip" />
    
    <EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_toRightOf="@+id/regUsernameLabel"
        android:layout_alignBottom="@+id/regUsernameLabel"
        android:layout_alignLeft="@+id/regPwdRepeat"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/regUsernameValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regUsername"
        android:layout_alignLeft="@id/regUsername"
        android:layout_marginTop="20dip"
        android:textSize="18dip"
        android:textColor="#FF0000" />
    
    <TextView
        android:id="@+id/regPwdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regUsernameValid"
        android:layout_marginTop="40dip"
        android:text="@string/passwd"
        android:textSize="20dip" />
    
    <EditText
        android:id="@+id/regPwd"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_toRightOf="@id/regPwdLabel"
        android:layout_alignBottom="@id/regPwdLabel"
        android:layout_alignLeft="@id/regPwdRepeat"
        android:inputType="textPassword" />
    
     <TextView
        android:id="@+id/regPwdValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regPwd"
        android:layout_alignLeft="@id/regPwd"
        android:layout_marginTop="20dip"
        android:textSize="18dip"
        android:textColor="#FF0000" />
    
    <TextView
        android:id="@+id/regPwdRepeatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regPwdValid"
        android:layout_marginTop="40dip"
        android:text="@string/pwdrepeat"
        android:textSize="20dip" />
    
    <EditText
        android:id="@+id/regPwdRepeat"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_toRightOf="@id/regPwdRepeatLabel"
        android:layout_alignBottom="@id/regPwdRepeatLabel"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/regPwdRepeatValid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regPwdRepeat"
        android:layout_alignLeft="@id/regPwdRepeat"
        android:layout_marginTop="20dip"
        android:textSize="18dip"
        android:textColor="#FF0000" />
    
    <Button 
        android:id="@+id/regEnter"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_below="@id/regPwdRepeatValid"
        android:layout_alignLeft="@id/regPwdRepeatValid"
        android:layout_marginTop="20dip" />
    
    <Button 
        android:id="@+id/regCancel"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_toRightOf="@id/regEnter"
        android:layout_alignTop="@id/regEnter" />

</RelativeLayout>